feat: 添加 CLI 入口，支持数据拉取、回测和策略列表功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "markdown.validate.enabled": true,
-    "commentTranslate.browse.mode": "contrast",
+    "commentTranslate.browse.mode": "inplace",
     "python.testing.pytestArgs": [
         "test"
     ],
